@startuml
!include ../../../../../../../StylesForDiagrams.puml

/'Specification'/
package domain as "com.vanskarner.domain" {
    package movie{
        class FindUpcomingMovieUseCase
        class FindFavoriteMovieUseCase
        class FilterUpcomingMoviesUseCase
        class DeleteAllFavoriteMoviesUseCase
        class CheckFavoriteMovieUseCase
        class ShowFavoriteMoviesUseCase
        class ShowUpcomingMoviesUseCase
        class ToggleMovieFavoriteUseCase
        interface MovieLocalRepository<<interface>>
        interface MovieRemoteRepository<<interface>>
        interface MovieServices<<interface>>
    }
}

package core as "com.vanskarner.core" {
    package concurrent{
        interface FutureResult<T><<interface>>
        interface FutureSimpleResult<<interface>>
    }
    package sync{
        interface Result<T><<interface>>
    }
}
/'Relations'/
FutureResult <.. FindUpcomingMovieUseCase: <<use>>
FutureResult <.. FindFavoriteMovieUseCase: <<use>>
Result <.. FilterUpcomingMoviesUseCase: <<use>>
FutureResult <.. DeleteAllFavoriteMoviesUseCase: <<use>>
FutureResult <.. CheckFavoriteMovieUseCase: <<use>>
FutureResult <.. ShowFavoriteMoviesUseCase: <<use>>
FutureResult <.. ToggleMovieFavoriteUseCase: <<use>>
FutureResult <.. MovieLocalRepository: <<use>>
FutureSimpleResult <.. MovieLocalRepository: <<use>>
FutureResult <.. MovieRemoteRepository: <<use>>
FutureResult <.. MovieRemoteRepository: <<use>>
FutureResult <.. MovieServices: <<use>>
Result <.. MovieServices: <<use>>

/'Visualization'/
hide members
skinparam LineType ortho
@enduml